1999-12-03  Sven Dietrich <sven_dietrich@trimble.com>

	* libntp/mexit.c: Moved WINNT port specific file to ports/winnt/libntp
	* ports/winnt/libntp/libntp.dsp: Fix WinNT makefile for new source loc.

1999-12-03  Harlan Stenn  <stenn@whimsy.udel.edu>

	* libntp/Makefile.am (libntp_a_SOURCES): Lose mexit.c - Sven will
	move it to the winnt port area.

1999-12-03  Sven Dietrich <sven_dietrich@trimble.com>

	* libntp/systime.c: Removed adjtime hack for WINNT
	* ports/winnt/ntpd/nt_clockstuff.c: Winnt double precision adjtime 
	* ports/winnt/inlcude/clockstuff.h: Remove no longer needed externs

1999-12-02  Harlan Stenn  <stenn@whimsy.udel.edu>

	* libparse/Makefile.in: Manually hacked to remove the
	libparse_kernel.a.[co] cruft

	* libparse/Makefile.am (k*.o): Generate these form the Makefile,
	not from separate .c files

	* html/tickadj.htm:
	* html/notes.htm:
	* html/hints/solaris.html:
	Point to the new dosynctodr report.

	* html/hints/solaris.xtra.S99ntpd:
	Update.  Should be rewritten to take advantage of the new -g
	switch and perhaps a loop to wait until ntpd hits a reasonable
	"state".
	
	* html/hints/solaris-dosynctodr.html: New information
	From: "John W. Sopko Jr." <sopko@cs.unc.edu>

1999-12-01  Harlan Stenn  <stenn@whimsy.udel.edu>

	* libntp/authkeys.c (auth_moremem): Clear memory allocated for sk.
	From: Hugo Mildenberger <hugo.mildenberger@topmail.de>

1999-12-01  Sven Dietrich <sven_dietrich@trimble.com>

	* libntp/recvbuff.c: Unused functions cleanup
	* ntpd/ntpd.c: ProcessorAffinity, IO cleanup
	* ports/winnt/instsrv/instsrv.c: Service name changed to NTP

	NT port shouldn;t hop between CPUs. Set affinity to first processor.
	Service name was NetworkTimeProtocol. Too long. Now NTP.

1999-12-01  Harlan Stenn  <stenn@whimsy.udel.edu>

	* scripts/plot_summary.pl: Improved option parsing.  Fixed one
	minor Perl compatibility error.
	* scripts/summary.pl: Official revision for NTPv4: Parse new